Pushed display grid up to stop timer from being covered

--- a/www/StoryTransmission/css/style.css
+++ b/www/StoryTransmission/css/style.css
@@ -24,7 +24,7 @@
 
 #displayGrid{
 	position: absolute;
-	top: 20%;
+	top: 25%;
 	left: 2%;
 	width: 35%;
 	height: 75%;
